# dyntrack

./: .coverage  .coveragerc  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  install.yml  test.yml
DynTrack/: __init__.py  logging.py  start.py
DynTrack/plot/: __init__.py  fit_ppt.py  ftle.py  utils.py
DynTrack/tools/: fit_ppt.py  vector_field.py
DynTrack/utils/: FTLE.py  load_data.py  track_tools.py
docs/: api.rst  conf.py  index.rst  installation.rst  references.rst
dyntrack/: DynTrack.py  __init__.py  settings.py  start.py
dyntrack/data/: background.tiff  tracks.csv
dyntrack/plot/: __init__.py  fit_ppt.py  ftle.py  tracks.py  utils.py  vector_field.py
dyntrack/tests/: test_all.py
dyntrack/tools/: __init__.py  fit_ppt.py  ftle.py  vector_field.py
dyntrack/utils/: FTLE.py  __init__.py  load_data.py  track_tools.py
vfkm/: ConstraintMatrix.cpp  ConstraintMatrix.h  Grid.cpp  Grid.h  LICENSE  Makefile  Optimizer.cpp  Util.cpp  Vector.h  Vector2D.cc  Vector2D.h  main.cpp
